--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -742,6 +742,38 @@ font-weight: 500;
 
 
 
+/* About Page */
+.aboutpage{
+    padding: 110px 0 110px;
+}
+.aboutmain h1{
+    color: rgb(183, 180, 180);
+}
+
+.aboutmain h3{
+    color: var(--dark-color);
+    padding: 40px 0;
+}
+.aboutdot{
+    position: relative;
+}
+.aboutdot img{
+    position: absolute;
+    top: -110px;
+    right: -90px;
+    max-height: 250px;
+}
+.aboutimage img{
+    border-radius: 50%;
+     object-fit: cover;
+    height: 460px;
+    width: 460px;
+}
+
+/* !@About Page */
+
+
+
 /* Partners Page */
 
 .Partner-main{
@@ -770,13 +802,13 @@ font-weight: 500;
 .partners-content .partnerImage {
     margin-top: 35px;
 }
-/* .partners-content .Partners-content-image::before{
-    content: url('../images/dotted.png');
+.dotimage{
+    position: relative;
+}
+.dotimage img{
     position: absolute;
-    width: 180px;
-    left: -195px;
-
-} */
+    left: -19rem;
+}
 .partners-content1 .title::before {
     background-color: #fff;
 }
@@ -786,20 +818,38 @@ font-weight: 500;
 /* !@Partners Page */
 
 
-
+/* Product Page */
 .productsection {
     padding: 70px 0 120px;
 }
 .featured-section .products-content{
     margin-top: 40px;
 }
+
+.dropdown a{
+    padding-right: 20px;
+}
 .dropdown img{
-    width: 5vw;
-    max-height: 50px;
+    width: 60px;
+    height: 50px;
+    /* max-height: 100px;
+    height: 90px; */
     object-fit: contain;
+    /* margin-left: 0%; */
+   
+}
+
+.dropbtn{
+    border: 1px solid var(--theme-color) !important;
+}
+.dropdown-toggle{
+    color: var(--theme-color) !important;
+}
+.dropbtn span{
+    color: black;
 }
 .dropbtn{
-    border: 1px solid #011453 !important;
+    /* padding: 0px 2px; */
 }
 .productCard1 .card-body .btn {
     opacity: 0;
@@ -807,21 +857,102 @@ font-weight: 500;
     transition: 0.3s ease;
 }
 
+/* !@Product Page */
 
+.about-section .images img:nth-child(3) {
+    position: absolute;
+    bottom: -6rem;
+    left: -3.5rem;
+    z-index: -1;
+}
 
+/* Contact Page */
 .top-image{
-    /* margin-top: -6%;
-    margin-right: -30%; */
-    /* position: absolute;
-    top: 0%;
-    bottom: 0%; */
+   position: relative;
+    /* margin-top: -8rem; */
+    z-index: -1;
+}
+.top-image img{
+    max-height: 250px;
+    position: absolute;
+    right: -90px;
+    top: -95px;
+}
+.contact-form{
+    z-index: 44;
+}
+.contact-info p{
+    font-size: 14px;
+    font-weight: 300;
+}
+.conatct-border{
+    border-bottom: 1px solid white;
+    margin-right: 200px;
 }
 .contact-loc{
-    border-bottom: 1px solid white;
+    margin-top: 25px;
+    margin-bottom: 30px;
+}
+.partners-content1 i{
+    font-size: 22px;
 }
 .contact-loc a{
     background-color: transparent;
     text-decoration: none;
     color: #fff;
+    font-size: 14px;
+
+}
+.contact-loc p{
+    /* width: 70%; */
+    font-size: 14px;
+}
+.contact-form input{
+    border-radius: 20px;
+    box-shadow: none !important;
+}
+.contact-form textarea{
+    box-shadow: none !important;
+}
+.contact-form button{
+    border-radius: 25px;
+    background-color: #fff;
+    padding: 10px 50px;
+    border: none;
+    text-transform: uppercase;
+}
+.contact-form button:hover{
+    background-color: var(--dark-color);
+    color: #fff;
+    transition: 0.5s;
+}
+.contact-form .form-control::placeholder{
+    /* color: #fff; */
+    font-size: 14px;
+    font-weight: 200;
+    padding-left: 10px;
+}
+.form .form-control::placeholder{
+    padding-top: 5px;
 }
 
+@media (max-width:1200px) {
+    .top-image img{
+        right: -10px;
+    }
+}
+@media (max-width:767px) {
+    .contact-form{
+        margin-top: 20px;
+    }
+}
+@media (max-width:425px) {
+    .conatct-border{
+        margin-right: 0px;
+    } 
+}
+/* .about-section {
+    padding: 150px 0 150px;
+    background: #e3f7ff;
+    overflow: hidden;
+} */
